Actualizando acceso de usuarios

--- a/src/main/resources/templates/403.html
+++ b/src/main/resources/templates/403.html
@@ -15,14 +15,14 @@
 </head>
 
 <body class="bg-dark text-white py-5">
-    <div class="container py-5">
+    <div class="container text-center" style="margin-top: 10em;">
         <div class="row">
             <div class="col-md-2 text-center">
                 <p><i class="fa fa-exclamation-triangle fa-5x"></i><br />Status Code: 403</p>
             </div>
             <div class="col-md-10">
-                <h3>OPPSSS!!!! Lo lamentamos...</h3>
-                <p>lo siento, tu acceso fue denegado por razones de seguridad por que se maneja informacion muy
+                <h3>¡No tienes acceso!</h3>
+                <p>Lo siento, tu acceso fue denegado por razones de seguridad por que se maneja informacion muy
                     importante.<br />Por favor regresa a la pagina anterior y sigue navegando.</p>
                 <a class="btn btn-danger" th:href="@{/}">Regresar</a>
             </div>
