--- a/src/main/resources/templates/verRegistro.html
+++ b/src/main/resources/templates/verRegistro.html
@@ -97,7 +97,8 @@
                 </div>
                 <br>
                 <form th:if="${val} == 'Desaparecido'" class="p-1"
-                    th:action="@{/write/especialD/} + ${registro.id} + '/' + ${registro.id_registro}" method="GET">
+                    th:action="@{/write/especialD/} + ${registro.id} + '/' + ${registro.id_registro}"
+                    sec:authorize="hasRole('ROLE_STATISTICS') or hasRole('ROLE_ADMIN')" method="GET">
                     <input th:name="id" type="hidden" th:value=${registro.id}>
                     <input th:name="id_registro" type="hidden" th:value=${registro.id_registro}>
                     <button type="submit" class="btn btn-success">
@@ -105,7 +106,8 @@
                 </form>
 
                 <form th:if="${val} == 'Peritaje'" class="p-1"
-                    th:action="@{/write/especial/} + ${registro.id} + '/' + ${registro.id_registro}" method="GET">
+                    th:action="@{/write/especial/} + ${registro.id} + '/' + ${registro.id_registro}"
+                    sec:authorize="hasRole('ROLE_STATISTICS') or hasRole('ROLE_ADMIN')" method="GET">
                     <input th:name="id" type="hidden" th:value=${registro.id}>
                     <input th:name="id_registro" type="hidden" th:value=${registro.id_registro}>
                     <button type="submit" class="btn btn-success">
@@ -113,7 +115,8 @@
                 </form>
                 <!-- Ingresar imagenes -->
                 <form th:if="${val} == 'Desaparecido'" class="p-1"
-                    th:action="@{/write/fotografia/D/} + ${registro.id} + '/' + ${registro.id_registro}" method="GET">
+                    th:action="@{/write/fotografia/D/} + ${registro.id} + '/' + ${registro.id_registro}"
+                    sec:authorize="hasRole('ROLE_STATISTICS') or hasRole('ROLE_ADMIN')" method="GET">
                     <input th:name="id" type="hidden" th:value=${registro.id}>
                     <input th:name="id_registro" type="hidden" th:value=${registro.id_registro}>
                     <button type="submit" class="btn btn-warning">
@@ -121,7 +124,8 @@
                 </form>
 
                 <form th:if="${val} == 'Peritaje'" class="p-1"
-                    th:action="@{/write/fotografia/P/} + ${registro.id} + '/' + ${registro.id_registro}" method="GET">
+                    th:action="@{/write/fotografia/P/} + ${registro.id} + '/' + ${registro.id_registro}"
+                    sec:authorize="hasRole('ROLE_STATISTICS') or hasRole('ROLE_ADMIN')" method="GET">
                     <input th:name="id" type="hidden" th:value=${registro.id}>
                     <input th:name="id_registro" type="hidden" th:value=${registro.id_registro}>
                     <button type="submit" class="btn btn-warning">
