--- a/src/main/resources/templates/listaPeritajes.html
+++ b/src/main/resources/templates/listaPeritajes.html
@@ -68,14 +68,14 @@
                                 </form>
                                 <form class="p-1"
                                     th:action="@{/write/editar/peritaje/} + ${desaPeri.id_peritaje} + '/' + ${desaPeri.id_desaperi}"
-                                    method="GET">
+                                    sec:authorize="hasRole('ROLE_STATISTICS') or hasRole('ROLE_ADMIN')" method="GET">
                                     <input th:name="id_peritaje" type="hidden" th:value=${desaPeri.id_peritaje}>
                                     <input th:name="id_desaperi" type="hidden" th:value=${desaPeri.id_desaperi}>
                                     <input type="submit" class="btn btn-success" value="Editar">
                                 </form>
                                 <form class="p-1"
                                     th:action="@{/admin/eliminar/peritaje/} + ${desaPeri.id_peritaje} + '/' + ${desaPeri.id_desaperi}"
-                                    method="GET">
+                                    sec:authorize="hasRole('ROLE_ADMIN')" method="GET">
                                     <input th:name="id_peritaje" type="hidden" th:value=${desaPeri.id_peritaje}>
                                     <input th:name="id_desaperi" type="hidden" th:value=${desaPeri.id_desaperi}>
                                     <input type="submit" class="btn btn-danger" value="Eliminar"
