--- a/src/main/resources/templates/charts.html
+++ b/src/main/resources/templates/charts.html
@@ -48,7 +48,7 @@
                     </tbody>
                 </table>
                 <br>
-                <div id="piechart" style="width: 75em; height: 400px; margin: auto;">
+                <div id="piechart" style="height: 400px; margin: auto;">
                     <div style="display: none;">${hm.mujer}</div>
                     <div style="display: none;">${hm.hombre}</div>
                 </div>
@@ -77,7 +77,7 @@
                     </tbody>
                 </table>
                 <br>
-                <div id="piechart-casos" style="width: 75em; height: 400px; margin: auto;">
+                <div id="piechart-casos" style="height: 400px; margin: auto;">
                     <div style="display: none;">${caso.caso1}</div>
                     <div style="display: none;">${caso.caso2}</div>
                     <div style="display: none;">${caso.caso3}</div>
