Correccion de labels

--- a/src/main/resources/templates/busquedaD.html
+++ b/src/main/resources/templates/busquedaD.html
@@ -38,8 +38,8 @@
             <br>
             <!--Nombre-->
             <form th:action="@{/show/busquedaDesaparecidos}" method="post" id="nombresid">
-                <label>Valor de b&uacute;squeda: </label>
-                <input type="text" placeholder="Nombre" th:name="nombre_registro" class="form-control" required>
+                <label>Nombre del afectado: </label>
+                <input type="text" placeholder="Nombre" th:name="nombre_registro" class="form-control">
                 <br>
                 <!--Sexo-->
                 <label>Sexo: </label>
@@ -54,7 +54,7 @@
             </form>
             <!--Identificador-->
             <form th:action="@{/show/busquedaDesaparecidos}" method="post" class="vis" id="identificadorid">
-                <label>Valor de b&uacute;squeda: </label>
+                <label>Identificador: </label>
                 <input type="text" placeholder="Identificador" th:name="id_registro" class="form-control" required>
                 <br>
                 <button type="submit" id="btnIdentificador" name="action" class="btn btn-primary"
