--- a/src/main/resources/templates/verDesaparecido.html
+++ b/src/main/resources/templates/verDesaparecido.html
@@ -31,7 +31,7 @@
             <div class="card">
                 <div class="card-body">
                     <div>
-                        <b class="d-inline">Identficador del registro: </b>
+                        <b class="d-inline">Identificador del registro: </b>
                         <p class="d-inline" th:text="${desaPeri.desaparecido.id_desaparecido}"></p>
                     </div>
                     <div>
