--- a/src/main/resources/templates/verPeritaje.html
+++ b/src/main/resources/templates/verPeritaje.html
@@ -31,7 +31,7 @@
             <div class="card">
                 <div class="card-body">
                     <div>
-                        <b class="d-inline">Identficador del registro: </b>
+                        <b class="d-inline">Identificador del registro: </b>
                         <p class="d-inline" th:text="${desaPeri.peritaje.id_peritaje}"></p>
                     </div>
                     <div>
@@ -39,7 +39,7 @@
                         <p class="d-inline" th:text="${desaPeri.peritaje.getEstadoDelegate}"></p>
                     </div>
                     <div>
-                        <b class="d-inline">Edad estimada: </b>
+                        <b class="d-inline">Edad/Edad estimada: </b>
                         <p class="d-inline" th:text="${desaPeri.peritaje.edad_estimada}"></p>
                     </div>
                     <div>
