--- a/src/main/resources/templates/verRegistro.html
+++ b/src/main/resources/templates/verRegistro.html
@@ -28,7 +28,7 @@
         <div class="card" style="padding: 1em 1em;">
 
             <div th:each="registro: ${registro}" class="card-body">
-                <b class="d-inline">Identficador del registro: </b>
+                <b class="d-inline">Identificador del registro: </b>
                 <p class="d-inline" th:text="${registro.id}"></p>
                 <div th:if="${registro.identificado}">
                     <b class="d-inline">Persona identificada: </b>
@@ -47,7 +47,7 @@
                     <p class="d-inline" th:text="${registro.contacto_familiar}"></p>
                 </div>
                 <div th:if="${registro.edad_estimada}">
-                    <b class="d-inline">Edad estimada: </b>
+                    <b class="d-inline">Edad/Edad estimada: </b>
                     <p class="d-inline" th:text="${registro.edad_estimada}"></p>
                 </div>
                 <div>
