Diseño a creacion de usuarios

--- a/src/main/resources/templates/usuario_registro.html
+++ b/src/main/resources/templates/usuario_registro.html
@@ -27,65 +27,55 @@
 		<div class="card" style="padding: 2em;">
 
 			<h1 class="text-center">Registro de Usuario </h1>
-			<form th:action="@{/admin/validar_usuario}" th:object="${usuario}" method="post"
-				style="max-width: 600px; margin: 0 auto;">
-				<div class="m-3">
-
-					<div class="form-group row">
-						<label class="col-4 col-form-label">Usuario: </label>
-						<div class="col-8">
-							<input type="text" th:field="*{username}" class="form-control" required />
-
-						</div>
+			<form th:action="@{/admin/validar_usuario}" th:object="${usuario}" method="post" style="margin: 0 8em;">
+				<div class="">
+					<div class="form-group">
+						<label for="usuario">Usuario: </label>
+						<input type="text" th:field="*{username}" class="form-control" required>
+						<div th:if="${#fields.hasErrors('username')}" th:errors="*{username}" class="alert alert-danger"
+							role="alert"></div>
 					</div>
 
-					<div class="form-group row">
-						<label class="col-4 col-form-label">Contraseña: </label>
-						<div class="col-8">
-							<input type="password" th:field="*{password}" class="form-control" required minlength="6"
-								maxlength="20" />
-
-						</div>
+					<div class="form-group">
+						<label for="password">Contraseña: </label>
+						<input id="password" type="password" th:field="*{password}" class="form-control" required
+							minlength="6">
+						<div th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="alert alert-danger"
+							role="alert"></div>
 					</div>
 
-					<div class="form-group row">
-						<label class="col-4 col-form-label">Nombre: </label>
-						<div class="col-8">
-							<input type="text" th:field="*{nombre}" class="form-control" required minlength="2"
-								maxlength="20" />
+					<div class="form-group">
+						<label for="nombre">Nombres: </label>
+						<input id="nombre" type="text" th:field="*{nombre}" class="form-control" required>
+						<div th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}" class="alert alert-danger"
+							role="alert"></div>
+					</div>
 
-						</div>
+					<div class="form-group">
+						<label for="apellido">Apellido: </label>
+						<input id="apellido" type="text" th:field="*{apellido}" class="form-control" required>
+						<div th:if="${#fields.hasErrors('apellido')}" th:errors="*{apellido}" class="alert alert-danger"
+							role="alert"></div>
+					</div>
 
-						<div class="form-group row">
-							<label class="col-4 col-form-label">Apellido: </label>
-							<div class="col-8">
-								<input type="text" th:field="*{apellido}" class="form-control" required minlength="2"
-									maxlength="20" />
+					<select hidden class="form-control" name="enabled_u" id="estado" th:field="${usuario.enabled_u}">
+						<option th:value="${true}">Activa</option>
+					</select>
 
-							</div>
-						</div>
-
-
-						<select hidden class="form-control" name="enabled_u" id="estado"
-							th:field="${usuario.enabled_u}">
-							<option th:value="${true}">Activa</option>
-						</select>
-
-
-						<label class="col-form-label">Roles: </label>
-						<select class="form-control" id="divisionSelect" th:field="*{rol.id_rol}">
+					<div class="form-group">
+						<label for="rol">Roles: </label>
+						<select class="form-control" id="rolSelect" th:field="*{rol.id_rol}">
 							<option value="col2">Selecciona una opci&oacute;n</option>
 							<option th:each="rol : ${roles}" th:id="${rol.id_rol}" th:value="${rol.id_rol}"
 								th:text="${rol.rol}"></option>
 						</select>
-
-
-
-
-						<div>
-							<button type="submit" class="btn btn-primary">Registrar</button>
-						</div>
 					</div>
+					<div th:if="${alertRol}" th:text="${alertRol}" class="alert alert-danger" role="alert"></div>
+
+					<div class="text-center">
+						<button type="submit" class="btn btn-primary">Registrar</button>
+					</div>
+				</div>
 			</form>
 		</div>
 	</div>
