--- a/src/main/resources/templates/charts.html
+++ b/src/main/resources/templates/charts.html
@@ -65,7 +65,7 @@
 			<div th:if="${cantidadPorCasos}">
 				<div th:each="caso: ${cantidadPorCasos}">
 					<div
-						th:if="${caso.caso1} and ${caso.caso2} and ${caso.caso3} and ${caso.caso4} and ${caso.caso5} == 0">
+						th:if="${caso.caso1} and ${caso.caso2} and ${caso.caso3} and ${caso.caso4} and ${caso.caso5} != 0">
 						<table class="table">
 							<thead class="thead-dark">
 								<tr>
@@ -100,7 +100,7 @@
 					</div>
 
 					<div
-						th:unless="${caso.caso1} and ${caso.caso2} and ${caso.caso3} and ${caso.caso4} and ${caso.caso5} == 0">
+						th:unless="${caso.caso1} and ${caso.caso2} and ${caso.caso3} and ${caso.caso4} and ${caso.caso5} != 0">
 						<div class="alert alert-danger" role="alert">No hay resultados para al busqueda realizada.
 						</div>
 					</div>
