--- a/src/main/resources/templates/listaUsuario.html
+++ b/src/main/resources/templates/listaUsuario.html
@@ -49,17 +49,17 @@
                         <td th:if="${user.username} != 'admin'">
 
                             <div class="d-flex">
-                                <form class="p-1" th:action="@{/admin/editar/usuario/} + ${user.id_usuario} "
+                                <form class="p-1" th:action="@{/admin/editar/usuario/} + ${user.username} "
                                     method="GET">
-                                    <input th:name="id_usuario" hidden th:value=${user.id_usuario}>
+                                    <input th:name="id_usuario" hidden th:value=${user.username}>
                                     <input th:if="${user.enabled_u} == true" type="submit" class="btn btn-success"
                                         value="Deshabilitar">
                                     <input th:unless="${user.enabled_u} == true" type="submit" class="btn btn-success"
                                         value="Habilitar">
                                 </form>
-                                <form class="p-1" th:action="@{/admin/eliminar/usuario/} + ${user.id_usuario}"
+                                <form class="p-1" th:action="@{/admin/eliminar/usuario/} + ${user.username}"
                                     method="GET">
-                                    <input th:name="id_usuario" hidden th:value=${user.id_usuario}>
+                                    <input th:name="id_usuario" hidden th:value=${user.username}>
                                     <input type="submit" class="btn btn-danger" value="Eliminar"
                                         onclick="return confirm('¿Estás seguro que deseas eliminar el usuario?');">
                                 </form>
