--- a/src/main/resources/templates/usuario_registro.html
+++ b/src/main/resources/templates/usuario_registro.html
@@ -27,33 +27,35 @@
 		<div class="card" style="padding: 2em;">
 
 			<h1 class="text-center">Registro de Usuario </h1>
-			<form th:action="@{/admin/validar_usuario}" th:object="${usuario}" method="post" style="margin: 0 8em;">
+			<form th:action="@{/admin/validar_usuario}" th:object="${usuario}" method="post">
 				<div class="">
 					<div class="form-group">
 						<label for="usuario">Usuario: </label>
-						<input type="text" th:field="*{username}" class="form-control" required>
+						<input type="text" th:field="*{username}" th:name="username" class="form-control">
 						<div th:if="${#fields.hasErrors('username')}" th:errors="*{username}" class="alert alert-danger"
 							role="alert"></div>
+						<div th:if="${iderror}" th:text="${iderror}" class="alert alert-danger" role="alert"></div>
 					</div>
 
 					<div class="form-group">
 						<label for="password">Contraseña: </label>
-						<input id="password" type="password" th:field="*{password}" class="form-control" required
-							minlength="6">
+						<input id="password" type="password" th:field="*{password}" class="form-control" minlength="6"
+							oninvalid="setCustomValidity('La cantidad mínima de caracteres es de 6.')"
+							onchange="try{setCustomValidity('')}catch(e){}">
 						<div th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="alert alert-danger"
 							role="alert"></div>
 					</div>
 
 					<div class="form-group">
 						<label for="nombre">Nombres: </label>
-						<input id="nombre" type="text" th:field="*{nombre}" class="form-control" required>
+						<input id="nombre" type="text" th:field="*{nombre}" class="form-control">
 						<div th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}" class="alert alert-danger"
 							role="alert"></div>
 					</div>
 
 					<div class="form-group">
 						<label for="apellido">Apellido: </label>
-						<input id="apellido" type="text" th:field="*{apellido}" class="form-control" required>
+						<input id="apellido" type="text" th:field="*{apellido}" class="form-control">
 						<div th:if="${#fields.hasErrors('apellido')}" th:errors="*{apellido}" class="alert alert-danger"
 							role="alert"></div>
 					</div>
@@ -65,7 +67,7 @@
 					<div class="form-group">
 						<label for="rol">Roles: </label>
 						<select class="form-control" id="rolSelect" th:field="*{rol.id_rol}">
-							<option value="col2">Selecciona una opci&oacute;n</option>
+							<option value="0">Selecciona una opci&oacute;n</option>
 							<option th:each="rol : ${roles}" th:id="${rol.id_rol}" th:value="${rol.id_rol}"
 								th:text="${rol.rol}"></option>
 						</select>
