--- a/src/main/resources/templates/editarPeritaje.html
+++ b/src/main/resources/templates/editarPeritaje.html
@@ -37,11 +37,12 @@
 
 
                     <label for="identificado">Persona identificada: </label>
-                    <input type="checkbox" id="identificado" th:field="*{identificado}">
+                    <input type="checkbox" id="identificado" th:field="*{identificado}" class="form-control">
                     <br>
 
                     <label for="edad_estimada">Edad/Edad estimada: </label>
-                    <input type="number" id="edad_estimada" th:name="edad_estimada" th:field="*{edad_estimada}">
+                    <input type="number" id="edad_estimada" th:name="edad_estimada" th:field="*{edad_estimada}"
+                        class="form-control">
                     <div th:if="${#fields.hasErrors('edad_estimada')}" th:errors="*{edad_estimada}"
                         class="alert alert-danger" role="alert"></div>
                     <br>
