--- a/src/main/resources/templates/IngresarDesaparecido.html
+++ b/src/main/resources/templates/IngresarDesaparecido.html
@@ -32,27 +32,30 @@
             <h1 th:text="${titulo}"></h1>
             <div>
                 <form th:action="@{/write/validarDesaparecido}" th:object="${desaparecido}" method="GET">
-
-                    <label for="id_desaparecido">Identficador del registro: </label>
-                    <input type="text" id="id_desaparecido" th:name="id_desaparecido" th:field="*{id_desaparecido}">
-                    <div th:if="${#fields.hasErrors('id_desaparecido')}" th:errors="*{id_desaparecido}"
-                        class="alert alert-danger" role="alert"></div>
-                    <div th:if="${iderror}" th:text="${iderror}" class="alert alert-danger" role="alert"></div>
+                    <div class="form-group">
+                        <label for="id_desaparecido">Identficador del registro: </label>
+                        <input type="text" id="id_desaparecido" th:name="id_desaparecido" th:field="*{id_desaparecido}"
+                            class="form-control">
+                        <div th:if="${#fields.hasErrors('id_desaparecido')}" th:errors="*{id_desaparecido}"
+                            class="alert alert-danger" role="alert"></div>
+                        <div th:if="${iderror}" th:text="${iderror}" class="alert alert-danger" role="alert"></div>
+                    </div>
                     <br>
 
                     <label for="nombre_familiar">Nombre de quien denuncia: </label>
-                    <input type="text" id="nombre_familiar" th:field="*{nombre_familiar}">
+                    <input type="text" id="nombre_familiar" th:field="*{nombre_familiar}" class="form-control">
                     <div th:if="${#fields.hasErrors('nombre_familiar')}" th:errors="*{nombre_familiar}"
                         class="alert alert-danger" role="alert"></div>
                     <br>
 
                     <label for="contacto_familiar">Contacto de quien denuncia: </label>
-                    <input type="text" id="contacto_familiar" th:field="*{contacto_familiar}">
+                    <input type="text" id="contacto_familiar" th:field="*{contacto_familiar}" class="form-control">
                     <div th:if="${#fields.hasErrors('contacto_familiar')}" th:errors="*{contacto_familiar}"
                         class="alert alert-danger" role="alert"></div>
                     <br>
                     <label for="fecha_nacimiento">Fecha de nacimiento (Del afectado): </label>
-                    <input type="text" id="datepicker" th:name="fecha_nacimiento" th:field="*{fecha_nacimiento}">
+                    <input type="text" id="datepicker" th:name="fecha_nacimiento" th:field="*{fecha_nacimiento}"
+                        class="form-control">
                     <div th:if="${#fields.hasErrors('fecha_nacimiento')}" th:errors="*{fecha_nacimiento}"
                         class="alert alert-danger" role="alert"></div>
                     <br>
