Botones de regreso a inicio

--- a/src/main/resources/templates/busquedaP.html
+++ b/src/main/resources/templates/busquedaP.html
@@ -70,6 +70,11 @@
                 <button type="submit" id="btnIdentificador" name="action" class="btn btn-primary"
                     value="buscaridentificador"><i class="fa fa-search"></i>Buscar</button>
             </form>
+            <div class="text-center">
+				<form th:action="@{/}">
+					<input type="submit" class="btn btn-primary" value="Regresar">
+				</form>
+			</div>
         </div>
 
     </div>
