--- a/src/main/resources/templates/usuario_registro.html
+++ b/src/main/resources/templates/usuario_registro.html
@@ -79,6 +79,12 @@
 					</div>
 				</div>
 			</form>
+			<br>
+			<div class="text-center">
+				<form th:action="@{/}">
+	    			<input type="submit" class="btn btn-primary" value="Regresar">
+				</form>
+			</div>
 		</div>
 	</div>
 </body>
