--- a/src/main/resources/templates/IngresarDesaparecido.html
+++ b/src/main/resources/templates/IngresarDesaparecido.html
@@ -80,6 +80,10 @@
                     <input type="submit" value="Siguiente" class="btn btn-primary">
 
                 </form>
+                <br>
+	            <form th:action="@{/}">
+	    			<input type="submit" class="btn btn-primary" value="Regresar">
+				</form>
             </div>
         </div>
     </div>
