--- a/src/main/resources/templates/IngresarPeritaje.html
+++ b/src/main/resources/templates/IngresarPeritaje.html
@@ -74,6 +74,12 @@
             <input type="submit" value="Siguiente" class="btn btn-primary">
 
             </form>
+            <br>
+            <div class="text-center" >
+	            <form th:action="@{/}">
+	    			<input type="submit" class="btn btn-primary" value="Regresar" style="width: 100%;">
+				</form>
+            </div>
         </div>
     </div>
     </div>
