--- a/src/main/resources/templates/listaRegistros.html
+++ b/src/main/resources/templates/listaRegistros.html
@@ -117,6 +117,11 @@
                     </tr>
                 </tbody>
             </table>
+            <div class="text-center">
+				<form th:action="@{/}">
+					<input type="submit" class="btn btn-primary" value="Regresar">
+				</form>
+			</div>
         </div>
     </div>
 
