--- a/src/main/resources/templates/selectChart.html
+++ b/src/main/resources/templates/selectChart.html
@@ -157,7 +157,11 @@
                     <br>
                     <input type="submit" value="Graficar" class="btn btn-primary">
                 </form>
-
+				<div class="text-center">
+					<form th:action="@{/}">
+						<input type="submit" class="btn btn-primary" value="Regresar">
+					</form>
+				</div>
             </div>
         </div>
     </div>
