--- a/src/main/resources/templates/editarPeritaje.html
+++ b/src/main/resources/templates/editarPeritaje.html
@@ -37,7 +37,7 @@
 
 
                     <label for="identificado">Persona identificada: </label>
-                    <input type="checkbox" id="identificado" th:field="*{identificado}" class="form-control">
+                    <input type="checkbox" id="identificado" th:field="*{identificado}">
                     <br>
 
                     <label for="edad_estimada">Edad/Edad estimada: </label>
