--- a/src/main/resources/templates/IngresarDesaparecido.html
+++ b/src/main/resources/templates/IngresarDesaparecido.html
@@ -83,9 +83,8 @@
                     <input type="submit" value="Siguiente" class="btn btn-primary">
 
                 </form>
-                <br>
-                <form th:action="@{/}">
-                    <input type="submit" class="btn btn-primary" value="Regresar">
+                <form th:action="@{/}" style="margin-top: 1em;">
+                    <input type="submit" class="btn btn-secondary" value="Regresar">
                 </form>
             </div>
         </div>
