--- a/src/main/resources/templates/IngresarPeritaje.html
+++ b/src/main/resources/templates/IngresarPeritaje.html
@@ -73,17 +73,10 @@
                         class="alert alert-danger" role="alert">
                     </div>
                     <br>
-                    <!--  -->
-                    <div class="row container">
-                        <div style="margin-right: 1em;">
-                            <form th:action="@{/}">
-                                <input type="submit" class="btn btn-secondary" value="Regresar">
-                            </form>
-                        </div>
-                        <div>
-                            <input type="submit" value="Siguiente" class="btn btn-primary">
-                        </div>
-                    </div>
+                    <input type="submit" value="Siguiente" class="btn btn-primary">
+                </form>
+                <form th:action="@{/}" style="margin-top: 1em;">
+                    <input type="submit" class="btn btn-secondary" value="Regresar">
                 </form>
             </div>
 
