--- a/src/main/resources/templates/listaRegistros.html
+++ b/src/main/resources/templates/listaRegistros.html
@@ -58,10 +58,10 @@
                     <label>Buscar entre fechas: </label>
                     <br>
                     <label for="fechaI">Fecha de inicial: </label>
-                    <input type="text" id="datepicker" th:name="fechaI">
+                    <input type="text" id="datepicker" th:name="fechaI" autocomplete="off">
     
                     <label for="fechaF">Fecha final: </label>
-                    <input type="text" id="datepicker2" th:name="fechaF">
+                    <input type="text" id="datepicker2" th:name="fechaF" autocomplete="off">
                     <br>
                     <input type="submit" value="Buscar" class="btn btn-primary">
                 </form>
@@ -88,10 +88,10 @@
                     <label>Buscar entre fechas: </label>
                     <br>
                     <label for="fechaI">Fecha de inicial: </label>
-                    <input type="text" id="datepicker3" th:name="fechaI">
+                    <input type="text" id="datepicker3" th:name="fechaI" autocomplete="off">
     
                     <label for="fechaF">Fecha final: </label>
-                    <input type="text" id="datepicker4" th:name="fechaF">
+                    <input type="text" id="datepicker4" th:name="fechaF" autocomplete="off">
                     <br>
                     <input type="submit" value="Generar" class="btn btn-warning">
                 </form>
