--- a/src/main/resources/templates/components/form-registros.html
+++ b/src/main/resources/templates/components/form-registros.html
@@ -6,11 +6,11 @@
     <div th:if="${#fields.hasErrors('direccion')}" th:errors="*{direccion}" class="alert alert-danger" role="alert">
     </div>
     <br>
-    <label for="nombre">Nombres: </label>
+    <label for="nombre">Nombres del afectado: </label>
     <input type="text" id="nombre" th:field="*{nombre}" class="form-control">
     <div th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}" class="alert alert-danger" role="alert"></div>
     <br>
-    <label for="apellido">Apellidos: </label>
+    <label for="apellido">Apellidos del afectado: </label>
     <input type="text" id="apellido" th:field="*{apellido}" class="form-control">
     <div th:if="${#fields.hasErrors('apellido')}" th:errors="*{apellido}" class="alert alert-danger" role="alert"></div>
     <br>
